# crewAI-examples

./: .gitignore  README.md  requirements.txt
.devcontainer/: devcontainer.json
Notebooks/csv-agent/: csv-agent.ipynb
Notebooks/db-docs/: checked_table_documentation.md  table_documentation.md  writing_documentation_poc_openai-2.ipynb
Notebooks/db-docs/config/: agents.yaml  tasks.yaml
Notebooks/project-planner/: project-planner.ipynb
Notebooks/sql-agent/: sql-agent.ipynb
datawarehouse-doc/: crew.py  main.py
datawarehouse-doc/config/: agents.yaml  tasks.yaml
job-posting/: industry_analysis.md  pyproject.toml
job-posting/src/job_posting/: crew.py
job-posting/src/job_posting/config/: tasks.yaml
surprise_trip/: pyproject.toml
surprise_trip/src/surprise_travel/: crew.py
surprise_trip/src/surprise_travel/config/: tasks.yaml
test_case_generator/: README.md  pyproject.toml  report.md
test_case_generator/knowledge/: document.md
test_case_generator/src/test_case_generator/: crew.py  main.py
test_case_generator/src/test_case_generator/config/: agents.yaml  tasks.yaml
