[tool.poetry]
name = "job_posting"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
crewai = {extras = ["agentops"], version = "^0.86.0"}
python-dotenv = "^1.0.1"
numpy = "2.2.0"
agentops = "^0.3.21"

[tool.poetry.scripts]
job_posting = "job_posting.main:run"
train = "job_posting.main:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
