[project]
name = "test_case_generator"
version = "0.1.0"
description = "test_case_generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0",
    "docling>=2.15.1",
]

[project.scripts]
test_case_generator = "test_case_generator.main:run"
run_crew = "test_case_generator.main:run"
train = "test_case_generator.main:train"
replay = "test_case_generator.main:replay"
test = "test_case_generator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
